--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-OPENWEATHER_API_KEY = 
+OPENWEATHER_API_KEY = 7d5692618f61c077683945041f728836
 OPENWEATHER_API_URL = "http://api.openweathermap.org/data/2.5/weather?q="
-TELEGRAM_API_TOKEN = 
+TELEGRAM_API_TOKEN = 724905970:AAGMDWlrKgACFeY5uYauryPH9ngeJUjtomk
